k8s/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  namespace: innowise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service

  template:
    metadata:
      labels:
        app: authentication-service

    spec:
      hostAliases:
        - ip: "192.168.65.254"
          hostnames:
            - "keycloak.local"

      containers:
        - name: authentication-service
          image: authentication-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8082

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: innowise
spec:
  selector:
    app: authentication-service
  ports:
    - port: 8082
      targetPort: 8082
