k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: innowise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.0.1

          ports:
            - containerPort: 9092
            - containerPort: 9093

          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data

      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: innowise
spec:
  selector:
    app: kafka

  ports:
    - name: internal
      port: 9092
      targetPort: 9092

    - name: controller
      port: 9093
      targetPort: 9093
