k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: innowise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      hostAliases:
        - ip: "192.168.65.254"
          hostnames:
            - "keycloak.local"

      containers:
        - name: order-service
          image: order-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8083

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: innowise
spec:
  selector:
    app: order-service
  ports:
    - port: 8083
      targetPort: 8083
