k8s/payment-service-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-mongodb
  namespace: innowise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service-mongodb

  template:
    metadata:
      labels:
        app: payment-service-mongodb

    spec:
      containers:
        - name: mongodb
          image: mongo:8.0

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-data
              mountPath: /data/db

          readinessProbe:
            exec:
              command:
                - mongosh
                - --quiet
                - --eval
                - "db.adminCommand('ping').ok"
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            exec:
              command:
                - mongosh
                - --quiet
                - --eval
                - "db.adminCommand('ping').ok"
            initialDelaySeconds: 20
            periodSeconds: 20

      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: payment-service-mongodb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-mongodb
  namespace: innowise
spec:
  selector:
    app: payment-service-mongodb
  ports:
    - port: 27017
      targetPort: 27017
