k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: innowise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      hostAliases:
        - ip: "192.168.65.254"
          hostnames:
            - "keycloak.local"

      containers:
        - name: payment-service
          image: payment-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8086

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8086
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8086
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: innowise
spec:
  selector:
    app: payment-service
  ports:
    - port: 8086
      targetPort: 8086
