k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: innowise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:7

          command:
            - redis-server
            - --requirepass
            - $(REDIS_PASSWORD)

          ports:
            - containerPort: 6379

          volumeMounts:
            - name: redis-data
              mountPath: /data

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli -a "$REDIS_PASSWORD" PING
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli -a "$REDIS_PASSWORD" PING
            initialDelaySeconds: 15
            periodSeconds: 20

      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: innowise
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
