k8s/user-service-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-postgres
  namespace: innowise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service-postgres
  template:
    metadata:
      labels:
        app: user-service-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
                - -d
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
                - -d
                - postgres
            initialDelaySeconds: 15
            periodSeconds: 10

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: user-service-postgres-pvc

        - name: init-script
          configMap:
            name: user-service-postgres-init

---
apiVersion: v1
kind: Service
metadata:
  name: user-service-postgres
  namespace: innowise
spec:
  selector:
    app: user-service-postgres
  ports:
    - port: 5432
      targetPort: 5432
