k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: innowise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      hostAliases:
        - ip: "192.168.65.254"
          hostnames:
            - "keycloak.local"

      containers:
        - name: user-service
          image: user-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: innowise
spec:
  selector:
    app: user-service
  ports:
    - port: 8080
      targetPort: 8080
